2000-02-16  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	* configure.in: Replaces obsolete gdbtk-variable.c with
	gdbtk-varobj.c.
	* configure: Regenerate.
	* Makefile.in: Remove obsolete/extraneous references to
	gdbtk-var* files.

2000-02-16  Mark Kettenis  <kettenis@gnu.org>

	* target.c (do_target_signal_to_host): Do not use REALTIME_LO in
	the conversion of the signal number.  TARGET_SIGNAL_REALTIME_33 is
	33 by definition, whereas REALTIME_LO might be 32 on systems that
	have SIG32 such as Linux.  Make sure that the signal number
	returned is within the range specified by REALTIME_LO and
	REALTIME_HI.

2000-02-16  Mark Kettenis  <kettenis@gnu.org>

	* configure: Regenerated.

2000-02-16  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	* arm-tdep.c (set_disassembly_flavor, arm_othernames,
	_initialize_arm_tdep): Allows the user to choose between any of
	the flavors available for the disassembly to be used in the "info
	reg" command and elsewhere in gdb.  It prevents having to maintain
	this information in two places by using the data kept in the
	opcodes directory.

2000-02-09  Mark Kettenis  <kettenis@gnu.org>

	* configure.in: Check for lwpid_t, psaddr_t, prgregset_t and
	prfpregset_t in <sys/procfs.h>.
	* config.in: Add HAVE_LWPID_T, HAVE_PSADDR_T, HAVE_PRGREGSET_T,
	HAVE_PRFPREGSET_T.
	* gdb_proc_service.h: Only provide typedefs for lwpid_t, psaddr_t,
	prgregset_t and prfpregset_t if they are not already present.

Wed Feb 16 19:00:02 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-01-26 Rodney Brown <RodneyBrown@pmsc.com>:
        * procfs.c: Define MERGEPID if not defined. For osf4.0e.

2000-02-15  Jason Molenda  (jsm@bugshack.cygnus.com)

	* Makefile.in (diststuff): Run 'diststuff' in doc/ subdir, not
	'do-doc'.

2000-02-15  Kevin Buettner  <kevinb@redhat.com>

	Changes for AIX 4.3:
	* rs6000-tdep.c (rs6000_fix_call_dummy): Set TOC register
	to correct value for generic dummy frames.  When using