@@ -1,3 +1,8 @@
+2000-02-17  Fernando Nasser  <fnasser@totem.to.cygnus.com>
+
+	* arm-tdep.c: Use header file instead of extern declarations for
+	the {get,set}_arm_regname* functions.
+
 2000-02-16  Fernando Nasser  <fnasser@totem.to.cygnus.com>
 
 	* configure.in: Replaces obsolete gdbtk-variable.c with
